# xtils

./: .gitignore  AGENTS.md  CMakeLists.txt  INSTALL.md  README.md  README_zh.md  base64.cc  base64.h  config.cc  config.h  config_test.cc  event_fd.cc  event_fd.h  http_server.cc  http_server.h  inspect.cc  inspect.h  inspect_example.cc  json.cc  json.h  json_test.cc  logger.cc  logger.h  main.cc  paged_memory.cc  paged_memory.h  platform.h  sample_config.json  scoped.h  scoped_file.h  sha1.cc  sha1.h  string_utils.cc  string_utils.h  string_view.h  task_runner.h  thread_task_runner.cc  thread_task_runner.h  unix_socket.cc  unix_socket.h  (+5 more)
.github/workflows/: cmake-single-platform.yml
cmake/: xtils-autogen.cmake  xtils-config.cmake.in
docs/: CHANGELOG.md  README.md  api-reference.md  architecture.md
examples/: CMakeLists.txt  basic_app.cc  bt_example.cc  common.cc  config.json  cron_scheduler_example.cc  fsm_example.cc  http_client_example.cc  inspect_example.cc  logger_example.cc  tcp_example.cc  timer_example.cc  tree_new.json  udp_example.cc  udp_multicast_example.cc  websocket_client_example.cc
examples/bt_trees/: main.json  patrol.json  recovery.json
include/xtils/app/: app.h  auto-gen.h  service.h
include/xtils/config/: config.h
include/xtils/core/: http_server.h
include/xtils/debug/: inspect.h  tracer.h
include/xtils/fsm/: behavior_tree.h  bt_compositelogger.h  bt_filelogger.h  bt_inspectlogger.h  fsm.h
include/xtils/logging/: logger.h  sink.h  watchdog.h
include/xtils/net/: http_client.h  http_common.h  http_router.h  http_server.h  tcp_client.h  tcp_server.h  udp_client.h  udp_server.h  websocket_client.h  websocket_common.h
include/xtils/net/transport/: mbedtls_transport.h  plain_tcp_transport.h  tls_factory.h  tls_transport.h  transport.h
include/xtils/system/: event_fd.h  paged_memory.h  platform.h  signal_handler.h  unix_socket.h
include/xtils/tasks/: cron_scheduler.h  event.h  task_group.h  task_runner.h  thread_task_runner.h  timer.h  unix_task_runner.h
include/xtils/utils/: base64.h  byte_reader.h  byte_writer.h  endianness.h  exception.h  file_utils.h  json.h  micros.h  scoped.h  sha1.h  string_utils.h  string_view.h  thread_safe.h  time_utils.h  type_traits.h  weak_ptr.h
src/app/: app.cc  app_main.cc  service.cc
src/config/: config.cc
src/core/: http_server.cc  main.cc
src/debug/: inspect.cc
src/fsm/: behavior_tree.cc  fsm.cc  fsm.cpp  nodes.h
src/logging/: logger.cc  sink.cc  sink.h  watchdog.cc
src/net/: http_client.cc  http_common.cc  http_router.cc  http_server.cc  tcp_client.cc  tcp_server.cc  udp_client.cc  udp_server.cc  websocket_client.cc  websocket_common.cc
src/net/transport/: plain_tcp_transport.cc  tls_transport_mbedtls.cc  tls_transport_openssl.cc
src/system/: event_fd.cc  paged_memory.cc  signal_handler.cc  unix_socket.cc
src/tasks/: event.cc  task_group.cc  thread_task_runner.cc  timer.cc  unix_task_runner.cc
src/utils/: base64.cc  byte_reader.cc  byte_writer.cc  file_utils.cc  json.cc  sha1.cc  string_utils.cc  time_utils.cc
tests/: CMakeLists.txt  base64_test.cc  behavior_tree_test.cc  bt_logger_test.cc  byte_utils_test.cc  config_test.cc  cron_scheduler_test.cc  event_test.cc  file_utils_test.cc  fsm_test.cc  http_common_test.cc  http_test.cc  json_test.cc  paged_memory_test.cc  sha1_test.cc  signal_handler_test.cc  sink_test.cc  string_utils_test.cc  task_group_test.cc  tcp_test.cc  time_utils_test.cc  timer_test.cc  udp_test.cc  unix_socket_test.cc
